@@ -1,2 +1,2 @@
 1
-drink/X   [VERB]
+drink/X	[VERB]
