@@ -1,3 +1,3 @@
 2
-drink/RQ  [verb]
-drink/S   [noun]
+drink/RQ	[verb]
+drink/S	[noun]
