@@ -1,3 +1,3 @@
 2
-work/A    [VERB]
-work/B    [NOUN]
+work/A	[VERB]
+work/B	[NOUN]
