@@ -1,3 +1,3 @@
 1
-drink/X   [VERB]
-dr-ank/X  [VERB]
+drink/X	[VERB]
+dr-ank/X	[VERB]
